--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <script src="js/background.js"></script>
         <script src="js/todo.js"></script>
         <script src="js/weather.js"></script>
+        <script src="./img/0.jpg"></script>
+        <script src="./img/2.jpg"></script>
+        <script src="./img/3.jpg"></script>
+        <script src="./img/4.jpg"></script>
 
     </body>
 </html>
